Issues persisting on mobile, added temporary fix.

--- a/public/scss/pages/_layout.scss
+++ b/public/scss/pages/_layout.scss
@@ -1,4 +1,89 @@
 /**
+* Mobile Temporary Banner
+**/
+
+.ezy__header33 {
+	/* Bootstrap variables */
+	--bs-body-bg: rgb(255, 255, 255);
+	--bs-body-bg-invert: rgb(246, 246, 246);
+
+	/* Easy Frontend variables */
+	--ezy-theme-color: rgb(13, 110, 253);
+	--ezy-theme-color-rgb: 13, 110, 253;
+
+	background-color: var(--bs-body-bg);
+	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: right;
+
+	display: flex;
+	align-items: center;
+	justify-content: center;
+
+	color: #fff;
+	overflow: hidden;
+	position: relative;
+	padding: 120px 0;
+	z-index: 1;
+}
+@media (min-width: 768px) {
+	.ezy__header33 {
+		padding: 200px 0;
+	}
+}
+
+.ezy__header33-heading.mb-4 {
+	font-weight: bold !important;
+	font-size: 64px !important;
+	line-height: 1.2 !important;
+	letter-spacing: 1px !important;
+}
+
+@media (min-width: 991px) {
+	.ezy__header33-heading {
+		font-size: 95px;
+	}
+}
+
+.ezy__header33-sub-heading {
+	font-size: 17px;
+	line-height: 1.8;
+}
+
+@media screen and (max-width: 620px) {
+	.ezy__header33-sub-heading {
+		width: 10% !important;
+	}
+}
+
+.ezy__header33-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background: linear-gradient(
+		130deg,
+		rgba(var(--ezy-theme-color-rgb), 0.35),
+		rgba(0, 0, 0, 0.631)
+	);
+	z-index: -1;
+}
+
+.ezy__header33-btn {
+	padding: 15px 30px !important;
+	font-weight: 700 !important;
+	color: #000 !important;
+	background-color: #fff !important;
+}
+.ezy__header33-btn:hover {
+	color: #000 !important;
+	background-color: rgba(255, 255, 255, 0.8) !important;
+}
+
+
+
+/**
 * Section
 **/
 
